add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(FindLoops)
add_subdirectory(FunctionNames)
add_subdirectory(FunctionLineNumber)
add_subdirectory(ObjCARC)
